# PROBLEM-HUB

migrations/: 20250726160950_add_updated_at_to_users.sql
probHub-RUST-backend/: Cargo.toml
probHub-RUST-backend/migrations/: 20250727122344_initial_setup.sql  20250727122820_add_otp_columns.sql
probHub-RUST-backend/src/: handlers.rs  main.rs  middleware.rs  models.rs
react-typescript-frontend/: complete-auth-test.html  package-lock.json  package.json
react-typescript-frontend/src/: App.tsx
react-typescript-frontend/src/components/: Dashboard.tsx  UserProfile.tsx
react-typescript-frontend/src/pages/: Login.tsx  Signup.tsx  VerifyOTP.tsx
src/: handlers.rs  main.rs
