[package]
name = "actix-web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio-rustls", "time"] }
time = { version = "0.3", features = ["serde"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "9"
chrono = "0.4"
futures-util = "0.3"
lettre = { version = "0.11", features = ["smtp-transport", "builder"] }
rand = "0.8"
actix-cors = "0.7.1"
